internal/testdata/sdk/error/fixtures/user_not_found_error_body.go
// Generated by Fern. Do not edit.

package api

type UserNotFoundErrorBody struct {
	RequestedUserId string `json:"requestedUserId"`
}
